cmake_minimum_required(VERSION 2.6)
add_compile_options(-std=c++0x)
set(CMAKE_BUILD_TYPE Debug CACHE STRING "Build type")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -fPIC -Wall -g2 -ggdb")  
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
project (learnopengl)
list(APPEND COMMON_LIBS "GLEW" "glfw3" "GL" "X11" "Xi" "Xrandr" "Xxf86vm" "Xinerama" "Xcursor" "rt" "m" "pthread" "dl")
add_subdirectory(src)
